--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,8 @@
 /* VARIABLES */
 
 :root {
-    --main-color: #156fdd;
+    --main-color: #5fb0ec;
+    --secondary-color: #156fdd;
     --main-text-color: #fff;
     --border-color: #999;
     --bio-bg-color: #1e2a3a;
@@ -22,6 +23,7 @@
 
 .highlight { color: var(--main-color) }
 .italic { font-style: italic }
+.hover-underline:hover { text-decoration: underline !important; }
 
 /* CONTAINERS */
 
@@ -124,8 +126,8 @@
     font-weight: bold;
     color: var(--main-text-color);
     text-decoration: none;
-    background-color: var(--main-color);
-    border: 2px solid var(--main-color);
+    background-color: var(--secondary-color);
+    border: 2px solid var(--secondary-color);
     border-radius: 5px;
     transition: .5s;
     width: 150px;
@@ -142,7 +144,7 @@
 
 #btn-projects:hover { background-color: transparent }
 
-#skills-section-title {
+.section-title {
     font-size: 32px;
     border-top: 1px solid var(--border-color);
     padding-top: 20px;
